Kubernetes/default-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-deployment
  labels:
    app: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default-page
        image: kodekloud/ecommerce:404
        ports:
        - containerPort: 8080
          protocol: TCP
