Kubernetes/default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-service
spec:
  selector:
    app: default
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
